added search engine with tests

--- a/research/src/tests/config.cfg
+++ b/research/src/tests/config.cfg
@@ -1,5 +1,5 @@
 [fasttext]
-path_to_model = C:/x/diplomka/research/model/fasttext/cc.cs.300.bin
+path_to_model = C:/x/diplomka/research/model/fasttext/wiki.cs/wiki.cs.bin
 
 [data]
 path_to_data = data
