fixed requirement config

--- a/application/recommender/setup.cfg
+++ b/application/recommender/setup.cfg
@@ -6,7 +6,7 @@
 name = recommender
 description = Public contracts recommender!
 author = Milan Vancl
-author-email = mvancl@profinit.eu
+author-email = vanclmil@fit.cvut.cz
 license = gplv2
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
@@ -29,7 +29,7 @@ package_dir =
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires = numpy; scipy; sklearn; fasttext; flask; flask-login, flask-session; flask-WTF; geopy; pandas; psycopg2; requests; textdistance; udapi; ufal.udpipe
+install_requires = numpy; scipy; sklearn; fasttext; flask; flask-login; flask-session; flask-WTF; geopy; pandas; psycopg2; requests; textdistance; udapi; ufal.udpipe
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
